# OpticsApp

./: README.md  doc_bg.docx
OpticsApp/: CMakeLists.txt  build_cmake.bat  build_project.bat  vscode_helper.code-workspace
OpticsApp/data/: data.txt
OpticsApp/inc/: OpticsMaterial.h  OpticsMaterial.hpp  Supplier.h  Supplier.hpp  SupplierManagement.h  SupplierManagement.hpp  Utility.h  Utility.hpp
OpticsApp/src/: OpticsMaterial.cpp  Supplier.cpp  SupplierManagement.cpp  main.cpp
